[tool.poetry]
name = "ai-course"
version = "0.1.0"
description = ""
authors = ["seel1993@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gym = "^0.26.2"
gymnasium = "^0.29.1"
matplotlib = "^3.8.3"
psutil = "^5.9.8"
pygame = "^2.5.2"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

